<resources>
    <string name="app_name">Pyatnashki</string>
    <string name="opions">Пятнашки или игра в 15 — известная игра из серии головоломок.
        Число 15 в названии игры происходит от числа костяшек, заключенных в рамке.
        Каждая костяшка пронумерована от 1 до 15. Всего в коробке 16 ячеек, одна из которых не занята костяшкой.
        Размер рамки 4х4. Игрок может перемещать костяшки в рамке за счет свободной ячейки.
        Цель игры — собрать костяшки в рамке с номерами по порядку, используя как можно меньше число ходов (перемещений).
        Игра считается завершенной, как только цель достигнута.
        Нажмите на экран, чтобы продолжить</string>
    <string name="options">Options</string>
    <string name="start">Start</string>
    <string name="pyatnashki">Pyatnashki</string>
    <string name="winner">Winner</string>
    <string name="finish">Finish</string>
    <string name="exite">Exite</string>
    <string name="restart">Restart</string>

</resources>
