<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pyatnashki"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold|italic" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Start"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textSize="18sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Options"
        android:text="@string/options"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exite"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:onClick="Exite"/>

</LinearLayout>
